<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".Register">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_header"
        />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_back"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btnBack"/>


    <EditText
        android:id="@+id/edtMainUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/imgRegister"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_user"/>

    <EditText
        android:id="@+id/edtMainEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/edtMainUsername"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_email"/>

    <EditText
        android:id="@+id/edtMainPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/edtMainEmail"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_phone_number"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_below="@id/edtMainPhoneNumber">
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:textColor="#808284"
            android:backgroundTint="@color/black"
            android:text="@string/txt_male"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/radioMale"
            android:textColor="#808284"
            android:text="@string/txt_female"/>
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/spinnerBloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radioGroup"
        >

    <Spinner
        android:id="@+id/bloodType"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
       />

        <Spinner
            android:id="@+id/rhesus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bloodType"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/edtRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/spinnerBloodType"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_password"/>

    <EditText
        android:id="@+id/edtRegisterRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/edtRegisterPassword"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_retype_password"/>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_below="@id/edtRegisterRetypePassword">
        <RadioButton
            android:id="@+id/radioPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:textColor="#808284"
            android:text="@string/txt_personal"/>
        <RadioButton
            android:id="@+id/radioOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColor="#808284"
            android:text="@string/txt_organization"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white"
        android:background="#808284"
        />

    <EditText
        android:id="@+id/edtRegisterHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/spinnerJob"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_home_address"/>

    <EditText
        android:id="@+id/edtRegisterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/edtRegisterHome"
        android:textColorHint="#808284"
        android:textColor="#808284"
        android:backgroundTint="#808284"
        android:hint="@string/txt_default_location"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_blood_needed_location"
            android:layout_below="@id/edtRegisterHome"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#808284"
        android:text="@string/txt_agree"
        android:layout_below="@id/edtRegisterLocation"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/design_default_color_primary_dark"
        android:text="@string/txt_register"
        android:onClick="pindahAlmost"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_stroke_blue"
        android:layout_below="@id/checkBox"/>



    </RelativeLayout>
</ScrollView>

</RelativeLayout>